fix z-index

--- a/extensions/amp-sticky-ad/1.0/amp-sticky-ad.css
+++ b/extensions/amp-sticky-ad/1.0/amp-sticky-ad.css
@@ -20,7 +20,7 @@ amp-sticky-ad {
   bottom: 0 !important;
   left: 0;
   width: 100% !important;
-  z-index: 11;
+  z-index: 11 !important;
   max-height: 100px !important;
   box-sizing: border-box;
   opacity: 1 !important;
